fix visited footer links wrong colour

--- a/wp-content/themes/wp-shield/static/assets/_src/scss/components/_footer.scss
+++ b/wp-content/themes/wp-shield/static/assets/_src/scss/components/_footer.scss
@@ -5,7 +5,7 @@ Footer
 .footer {
   overflow: hidden;
   padding: 2.4rem 0 0;
-  
+
   a {
     border-radius: .5rem;
   }
@@ -168,6 +168,11 @@ Footer
 
 .eit-non-blocks .footer__list .list-about li a:hover {
   text-decoration: underline !important;
+}
+
+.eit-non-blocks footer a:focus,
+.eit-non-blocks footer a:visited:not(.button) {
+  color: $c-extradarkbeige !important;
 }
 
 .eit-non-blocks .footer__list .list-basic a {
